--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.3",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
-    "next": "15.2.4",
+    "clsx": "^2.1.1",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.5",
+    "tailwind-merge": "^3.0.2",
     "three": "^0.174.0"
   },
   "devDependencies": {
