--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "autoprefixer": "^10.4.17",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "glslify-loader": "^2.0.0",
     "postcss": "^8.4.35",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
